# d2-little

./: .gitignore  Cargo.toml  LICENSE  README.md  SVG_E2E_MIGRATION_CHECKLIST.md  run_e2e.sh  tests_deps.toml
.github/workflows/: ci.yml  release.yml
crates/d2-ast/: Cargo.toml
crates/d2-ast/src/: lib.rs
crates/d2-chroma/: Cargo.toml
crates/d2-chroma/src/: bash_lexer.rs  engine.rs  go_lexer.rs  lib.rs  python_lexer.rs  themes.rs
crates/d2-chroma/tests/: go_e2e.rs
crates/d2-color/: Cargo.toml
crates/d2-color/src/: lib.rs
crates/d2-compiler/: Cargo.toml
crates/d2-compiler/src/: lib.rs
crates/d2-dagre-layout/: Cargo.toml
crates/d2-dagre-layout/examples/: repro_1_to_2.rs  repro_child_to_child.rs
crates/d2-dagre-layout/src/: lib.rs
crates/d2-exporter/: Cargo.toml
crates/d2-exporter/src/: lib.rs
crates/d2-flate/: Cargo.toml
crates/d2-flate/src/: deflate.rs  huffman_bit_writer.rs  huffman_code.rs  token.rs  zlib.rs
crates/d2-flate/tests/: round_trip.rs
crates/d2-font/: Cargo.toml
crates/d2-font/src/: subset.rs  woff.rs
crates/d2-font/tests/: byte_match.rs
crates/d2-font/tests/fixtures/: go_woff_ab_bold.hex
crates/d2-fonts/: Cargo.toml
crates/d2-fonts/src/: lib.rs
crates/d2-geo/: Cargo.toml
crates/d2-geo/src/: lib.rs
crates/d2-graph/: Cargo.toml
crates/d2-graph/src/: go_sort.rs  lib.rs
crates/d2-grid/: Cargo.toml
crates/d2-grid/src/: lib.rs
crates/d2-ir/: Cargo.toml
crates/d2-ir/src/: lib.rs
crates/d2-label/: Cargo.toml
crates/d2-label/src/: lib.rs
crates/d2-latex/: Cargo.toml
crates/d2-lib/: Cargo.toml
crates/d2-lib/examples/: dump_basic.rs  dump_bytes.rs  dump_case.rs  dump_graph.rs  dump_hash_bytes.rs  dump_ir.rs  dump_layout.rs  ruler_test.rs  sketch_poc.rs
crates/d2-lib/src/: lib.rs
crates/d2-lib/tests/: e2e.rs  e2e_cases.json  e2e_runner.rs  find_overflow.rs  phase_probe.rs
crates/d2-parser/: Cargo.toml
crates/d2-parser/src/: lib.rs
crates/d2-sequence/: Cargo.toml
crates/d2-sequence/src/: lib.rs
crates/d2-shape/: Cargo.toml
crates/d2-shape/src/: lib.rs
crates/d2-sketch/: Cargo.toml
crates/d2-sketch/src/: lib.rs  rough.rs
crates/d2-svg-path/: Cargo.toml
crates/d2-svg-path/src/: lib.rs
crates/d2-svg-render/: Cargo.toml
crates/d2-svg-render/src/: lib.rs
crates/d2-target/: Cargo.toml
crates/d2-target/src/: lib.rs
crates/d2-textmeasure/: Cargo.toml
crates/d2-textmeasure/examples/: measure.rs  measure_test.rs
crates/d2-textmeasure/src/: lib.rs
crates/d2-themes/: Cargo.toml
crates/d2-themes/src/: lib.rs
examples/: dump_basic.rs  dump_bytes.rs  dump_case.rs  dump_graph.rs  dump_hash_bytes.rs  dump_ir.rs  dump_layout.rs  measure.rs  measure_test.rs  ruler_test.rs
scripts/: gen_dagre_svg_e2e_manifest.go
src/: ast.rs  compiler.rs  dagre_layout.rs  exporter.rs  fonts.rs  geo.rs  grid.rs  ir.rs  label.rs  latex.rs  lib.rs  parser.rs  sequence.rs  shape.rs  svg_path.rs  target.rs  textmeasure.rs  themes.rs
src/chroma/: bash_lexer.rs  engine.rs  go_lexer.rs  mod.rs  python_lexer.rs  themes.rs
src/dagre/: README.md
src/dagre/layout/: acyclic.rs  add_border_segments.rs  coordinate_system.rs  mod.rs  nesting_graph.rs  normalize.rs  parent_dummy_chains.rs  tests.rs  types.rs  util.rs
src/dagre/layout/order/: add_subgraph_constraints.rs  barycenter.rs  build_layer_graph.rs  cross_count.rs  init_order.rs  mod.rs  resolve_conflicts.rs  sort_subgraph.rs
src/dagre/layout/position/: bk.rs  mod.rs
src/dagre/layout/rank/: feasible_tree.rs  mod.rs  network_simplex.rs  util.rs
src/flate/: adler32.rs  consts.rs  deflate.rs  huffman_bit_writer.rs  huffman_code.rs  mod.rs  zlib.rs
src/font/: mod.rs  subset.rs  woff.rs
src/graph/: go_sort.rs  mod.rs
src/sketch/: LICENSE  mod.rs  rough.rs
src/svg_render/: mod.rs
tests/: chroma_go_e2e.rs  dagre_cross_validate.rs  e2e.rs  e2e_cases.json  e2e_dagre_svg_cases.json  e2e_runner.rs  find_overflow.rs  flate_round_trip.rs  font_byte_match.rs  phase_probe.rs
tests/e2e_testdata/: LICENSE
tests/fixtures/: README.md
tests/fixtures/font_byte_match/: go_ttf_ab_bold.hex
tests/unit_testdata/: LICENSE
