[workspace]
members = [
    "crates/d2-geo",
    "crates/d2-svg-path",
    "crates/d2-color",
    "crates/d2-label",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["kookyleo <kookyleo@gmail.com>"]
repository = "https://github.com/kookyleo/d2-little"
