[workspace]
members = [
    "crates/d2-geo",
    "crates/d2-svg-path",
    "crates/d2-color",
    "crates/d2-label",
    "crates/d2-ast",
    "crates/d2-parser",
    "crates/d2-flate",
    "crates/d2-font",
    "crates/d2-fonts",
    "crates/d2-textmeasure",
    "crates/d2-themes",
    "crates/d2-target",
    "crates/d2-shape",
    "crates/d2-ir",
    "crates/d2-compiler",
    "crates/d2-graph",
    "crates/d2-dagre-layout",
    "crates/d2-sequence",
    "crates/d2-grid",
    "crates/d2-exporter",
    "crates/d2-svg-render",
    "crates/d2-sketch",
    "crates/d2-chroma",
    "crates/d2-latex",
    "crates/d2-lib",
    "packages/web",
]
resolver = "3"

[workspace.package]
version = "0.7.1"
edition = "2024"
license = "Apache-2.0"
authors = ["kookyleo <kookyleo@gmail.com>"]
repository = "https://github.com/kookyleo/d2-little"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
