[package]
name = "d2-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
d2-ast = { path = "../d2-ast" }
d2-ir = { path = "../d2-ir" }
d2-parser = { path = "../d2-parser" }
d2-graph = { path = "../d2-graph" }
d2-target = { path = "../d2-target" }
d2-themes = { path = "../d2-themes" }
d2-color = { path = "../d2-color" }
d2-geo = { path = "../d2-geo" }
d2-textmeasure = { path = "../d2-textmeasure" }
roxmltree = "0.20"
