[package]
name = "d2-dagre-layout"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
d2-graph = { path = "../d2-graph" }
d2-geo = { path = "../d2-geo" }
d2-label = { path = "../d2-label" }
d2-shape = { path = "../d2-shape" }
d2-target = { path = "../d2-target" }
dagre = { path = "../../vendor/dagre" }
