[package]
name = "d2-lib"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
d2-ast = { path = "../d2-ast" }
d2-parser = { path = "../d2-parser" }
d2-ir = { path = "../d2-ir" }
d2-compiler = { path = "../d2-compiler" }
d2-graph = { path = "../d2-graph" }
d2-dagre-layout = { path = "../d2-dagre-layout" }
d2-exporter = { path = "../d2-exporter" }
d2-svg-render = { path = "../d2-svg-render" }
d2-target = { path = "../d2-target" }
d2-themes = { path = "../d2-themes" }
d2-textmeasure = { path = "../d2-textmeasure" }
d2-fonts = { path = "../d2-fonts" }
