[package]
name = "d2-sketch"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
d2-target = { path = "../d2-target" }
d2-themes = { path = "../d2-themes" }
d2-geo = { path = "../d2-geo" }
d2-color = { path = "../d2-color" }
d2-label = { path = "../d2-label" }
d2-svg-path = { path = "../d2-svg-path" }
serde = { workspace = true }
serde_json = "1"
rquickjs = "0.11.0"
regex = "1"
