[package]
name = "d2-textmeasure"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
d2-fonts = { path = "../d2-fonts" }
ttf-parser = "0.21"
unicode-segmentation = "1"
markdown = "1"
regex = "1"
roxmltree = "0.20"
unicode-width = "0.1"
